Small style and whitespace fixes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,19 +15,40 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 700;
 }
 
+h1 { font-size: 1.5em; margin-top: 16px; margin-bottom: 16px; }
+h2 { font-size: 1.17em; margin-top: 20px; margin-bottom: 16px; }
+h3 { font-size: 1.12em; }
+h4 { font-size: 0.83em; }
+h5 { font-size: 0.75em; }
+h6 { font-size: 0.60em; }
+
+div.section:first-child h2 { margin-top: 16px; }
+
+section:first-child h2:first-child { margin-top: 16px; }
+
 section#content {
     margin-top: 50px;
     padding: 10px 30px;
     background: white;
 }
 
+ul.simple li {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 .active {
     background-color: white;
 }
 
+header#banner h1 {
+    margin-top: 21px;
+}
+
 header#banner h1 a {
-    padding-left: 5px;
-    padding-right: 5px;
+    font-size: 32px;
+    padding-left: 6px;
+    padding-right: 6px;
 }
 
 header#banner nav {
@@ -44,8 +65,8 @@ header#banner nav li {
     display: inline;
     margin: 0;
     margin-left: 5px;
-    padding-right: 2px;
-    padding-left: 2px;
+    padding-right: 3px;
+    padding-left: 3px;
 }
 
 header#banner h1 {
@@ -86,9 +107,14 @@ ol#post-list li article .date {
 }
 
 code {
-    background: gainsboro;
+    background: #f1f1f1;
     padding-left: 2px;
     padding-right: 2px;
+}
+
+pre.literal-block {
+    background: #f1f1f1;
+    padding: 5px;
 }
 
 span.entry-date {
